{
  "version": 4,
  "terraform_version": "0.12.2",
  "serial": 164,
  "lineage": "18a59758-c14a-1b0b-8072-57c0d0a7eba1",
  "resources": [
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewalli-ext",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "8443",
                  "80",
                  "443",
                  "8080"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2019-07-09T06:55:39.876-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "dev-vpc--firewall-ext",
            "name": "dev-vpc--firewall-ext",
            "network": "https://www.googleapis.com/compute/v1/projects/psyched-bonito-231114/global/networks/dev-vpc",
            "priority": 1000,
            "project": "psyched-bonito-231114",
            "self_link": "https://www.googleapis.com/compute/v1/projects/psyched-bonito-231114/global/firewalls/dev-vpc--firewall-ext",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "firstcluster"
            ],
            "timeouts": null
          }
        }
      ]
    },
    {
      "module": "module.firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewalli-int",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              },
              {
                "ports": [],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2019-07-09T06:55:40.093-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "id": "dev-vpc-firewall-int",
            "name": "dev-vpc-firewall-int",
            "network": "https://www.googleapis.com/compute/v1/projects/psyched-bonito-231114/global/networks/dev-vpc",
            "priority": 1000,
            "project": "psyched-bonito-231114",
            "self_link": "https://www.googleapis.com/compute/v1/projects/psyched-bonito-231114/global/firewalls/dev-vpc-firewall-int",
            "source_ranges": [
              "10.10.0.0/24",
              "10.20.0.0/24"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "firstcluster",
              "secondcluster"
            ],
            "timeouts": null
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "dev-vpc",
            "name": "dev-vpc",
            "project": "psyched-bonito-231114",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/psyched-bonito-231114/global/networks/dev-vpc"
          }
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet1",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2019-07-09T06:55:39.992-07:00",
            "enable_flow_logs": false,
            "fingerprint": "294x0LROS2Q=",
            "gateway_address": "10.10.0.1",
            "id": "europe-west1/dev-vpc-subnet1",
            "ip_cidr_range": "10.10.0.0/24",
            "name": "dev-vpc-subnet1",
            "network": "https://www.googleapis.com/compute/v1/projects/psyched-bonito-231114/global/networks/dev-vpc",
            "private_ip_google_access": false,
            "project": "psyched-bonito-231114",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/psyched-bonito-231114/regions/europe-west1/subnetworks/dev-vpc-subnet1"
          }
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet2",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2019-07-09T06:55:40.006-07:00",
            "enable_flow_logs": false,
            "fingerprint": "bx_1Yx8xQGU=",
            "gateway_address": "10.20.0.1",
            "id": "europe-west1/dev-vpc-subnet2",
            "ip_cidr_range": "10.20.0.0/24",
            "name": "dev-vpc-subnet2",
            "network": "https://www.googleapis.com/compute/v1/projects/psyched-bonito-231114/global/networks/dev-vpc",
            "private_ip_google_access": false,
            "project": "psyched-bonito-231114",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/psyched-bonito-231114/regions/europe-west1/subnetworks/dev-vpc-subnet2"
          }
        }
      ]
    }
  ]
}